# CC4M-githooks

./: README.md  pre-commit  precommit.py  precommit_example.m
cc4m_githooks/: pyproject.toml
cc4m_githooks/src/cc4m_githooks/: precommit.py
cc4mpy/: pyproject.toml
matlab/: cc4m_connectpy.m  install.m  installEngine.m  install_git_hooks.m  precommit_example.m
newsession/: pre-commit  precommit_example.m
newsession_with_proceed_dialog/: pre-commit  precommit_example.m
with_proceed_dialog/: pre-commit  precommit_example.m
