[project]
name = "cc4mpy"
version = "0.1.0"
description = "A module fior integration of CC4M with GIT pre-commit hooks via Python."
authors = [
    { name = "MonkeyProof Solutions BV", email = "info@monkeyproofsolutions.nl" },
]
license = "MIT"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = ["matlabengine"]
